--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <li><a href="#">Inicio</a></li>
 
-                    <li><a href="https://yailinm43.wixsite.com/apollo">bloc</a></li>
+                    <li><a href="https://yailinm43.wixsite.com/apolo">bloc</a></li>
 
                     <li><a href="https://open.spotify.com/playlist/0D1Cb558vdLvQBmapD5Gco?si=62dc9e8a126b4dd2" target="_blank" rel="noopener noreferrer">Playlist</a></li>
 
