--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     <li><a href="https://open.spotify.com/playlist/0D1Cb558vdLvQBmapD5Gco?si=62dc9e8a126b4dd2" target="_blank" rel="noopener noreferrer">Playlist</a></li>
 
-                    <li><a href="https://yailinm43.wixsite.com/apollo">Lanzamiento</a></li>
+                    <li><a href="https://www.pinterest.com.mx/Lenaelle88/bangtan~jungkook/">Galeria</a></li>
 
                 </ul>
 
@@ -120,8 +120,8 @@
             
         </div>
         
-        <a href="https://youtu.be/UNo0TG9LwwI?si=z4vlvXVg5TCqcTtx" target="_blank" rel="noopener noreferrer" class="btn-3">lanzamientos</a>
-</main>    
+        <a href="https://www.pinterest.com.mx/Lenaelle88/bangtan~jungkook/" target="_blank" rel="noopener noreferrer" class="btn-3">galeria</a>
+</main>
 
 
 
